--- a/Front/.env
+++ b/Front/.env
@@ -4,3 +4,6 @@ REACT_APP_FIREBASE_PROJECT_ID=futsscore-be650
 REACT_APP_FIREBASE_STORAGE_BUCKET=futsscore-be650.appspot.com
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=636285324429
 REACT_APP_FIREBASE_APP_ID=1:636285324429:web:59427defc365b0f5a326c4
+
+VITE_PHONE_NUMBER='+5492494487878'
+VITE_MAIL='futsscore.pelotas@gmail.com'
