--- a/Front/package.json
+++ b/Front/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.21.3",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
+    "sweetalert2": "^11.10.5",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
