introduccion variables de entorno

--- a/Front/.env
+++ b/Front/.env
@@ -1,9 +1,9 @@
-REACT_APP_FIREBASE_API_KEY=AIzaSyBv3Fyv-I50pmC-sN-5UD7Vm5v49hMj5Fc
-REACT_APP_FIREBASE_AUTH_DOMAIN=futsscore-be650.firebaseapp.com
-REACT_APP_FIREBASE_PROJECT_ID=futsscore-be650
-REACT_APP_FIREBASE_STORAGE_BUCKET=futsscore-be650.appspot.com
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID=636285324429
-REACT_APP_FIREBASE_APP_ID=1:636285324429:web:59427defc365b0f5a326c4
+VITE_FIREBASE_API_KEY=AIzaSyBv3Fyv-I50pmC-sN-5UD7Vm5v49hMj5Fc
+VITE_FIREBASE_AUTH_DOMAIN=futsscore-be650.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=futsscore-be650
+VITE_FIREBASE_STORAGE_BUCKET=futsscore-be650.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=636285324429
+VITE_FIREBASE_APP_ID=1:636285324429:web:59427defc365b0f5a326c4
 
 VITE_PHONE_NUMBER='+5492494487878'
 VITE_MAIL='futsscore.pelotas@gmail.com'
